<resources>
    <string name="app_name">Blood_bank</string>
    <string name="rememberme">تذكرني</string>
    <string name="login_text">دخول</string>
    <string name="creat_pasword">انشاء حساب جديد</string>
    <string name="fotgetpasswoard">نست كلمه المرور</string>
    <string name="phonenumber">رقم الجوال</string>
    <string name="send">ارسال</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changepasswoard">كود تغير كلمه المرور</string>
    <string name="pinconfirm">كود التحقيق</string>
    <string name="newpasswoard">كلمه المرور الجديده</string>
    <string name="confirmpass">تاكيد كلمه المرور</string>
    <string name="changepass">تغير كلمه المرور</string>
    <string name="creatnewacount">انشاء حساب جديد</string>
    <string name="name">الاسم</string>
    <string name="email">البريد الالكتروني</string>
    <string name="datebirth">تاريخ الميلاد</string>
    <string name="lastdate">اخر تاريخ للتبرع</string>
    <string name="phone_number">رقم التلفون</string>
    <string name="password_sure">تاكيد كلمه المرور</string>
    <string name="create">انشاء</string>
    <string name="text_splash">جميع الحقوق محفوظه لشركه ابداع تك للبرمجيات</string>
    <string name="skip">تخطي</string>
    <string name="title_activity_blood_navigation">blood_navigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mayinformation">معلوماتي</string>
    <string name="sitingnafication">اعدادات الاشعارت</string>
    <string name="favorit">المفضله</string>
    <string name="home">الرئيسيه</string>
    <string name="userinformation">تعليمات الاستخدام</string>
    <string name="Connectwithus">تواصل معنا</string>
    <string name="aboutapp">عن التطبيق</string>
    <string name="Assess">تقيم التطبيق علي المتجر</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="pachant_name">اسم المريض</string>
    <string name="hospital"> اسم المستشفي</string>
    <string name="elmadena">المدينه</string>
    <string name="b">B+</string>
    <string name="sendrequest">ارسال الطلب</string>
    <string name="Notes">ملاحظات</string>
    <string name="phone">الهاتف</string>
    <string name="Hospitaladdress">عنوان المستشفي</string>
    <string name="cityname">المدينه</string>
    <string name="eage">العمر</string>
    <string name="numbers">عدد الاكياس</string>
    <string name="kindblood">فصيله الدم</string>
    <string name="city">المحافظه</string>
    <string name="al_dakahlya">المدينه</string>
    <string name="request">طلب التبرع</string>
    <string name="bloodtypes">فصائل الدم</string>
    <string name="edit">تعديل</string>
    <string name="password">كلمه المرور</string>
    <string name="mansouraa">المنصوره</string>
    <string name="_20_9_2018">20/9/2018</string>
    <string name="_27_1_1990">27/1/1990</string>
    <string name="o">O+</string>
    <string name="name_name_com">email</string>
    <string name="Name">name</string>
    <string name="contactus">تواصل معنا</string>
    <string name="titeladress">عنوان الرساله</string>
    <string name="massege_content">نص الرساله</string>
    <string name="name_ahmed">الاسم: احمد</string>
    <string name="age">العمر</string>
    <string name="kind_blood">فصيله الدم</string>
    <string name="hospital_pleace">عنوان المستشفي</string>
    <string name="elgwal_phone">الجوال</string>
    <string name="details">التفاصيل</string>
    <string name="call">اتصال</string>
    <string name="notifacation_brivet">تنبيه بخصوص طلبك</string>
    <string name="Thewaytopreventdisease">طريقه الوقايه من الامراض</string>
    <string name="blood_type">فصائل الدم</string>
    <string name="goverment">المحافظات</string>
    <string name="save">حفظ</string>
    <string name="textsitingnotification">هذا النص هوا مثال لنص يمكن ان يستبدل في نفس المساحه,لقد تم توليد هذا النص من مولد النص العربي,حيث يمكنك ان تولد مثل هذا النص او العديد من النصوص الاخري</string>
    <string name="title_activity_maps">Map</string>
    <string name="gomylocatio">gomylocatio</string>
    <string name="areyousuretologoutapp">هل تريد الخروج من التطبيق؟</string>
</resources>
