<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.fragment.Edit_InformationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editprofile_ed_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxl"
                android:hint="@string/Name"
                android:textSize="@dimen/text_size_s"
                android:background="@drawable/edittext"
                android:layout_marginTop="@dimen/l"
                android:layout_marginStart="@dimen/l"
                android:layout_marginEnd="@dimen/l"/>
            <EditText
                android:id="@+id/editprofile_ed_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxl"
                android:background="@drawable/edittext"
                android:hint="@string/name_name_com"
                android:textSize="@dimen/text_size_s"
                android:layout_marginTop="@dimen/m"
                android:layout_marginStart="@dimen/l"
                android:layout_marginEnd="@dimen/l"/>
            <Spinner
                android:id="@+id/editprofile_sp_bloodtype"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxl"
                android:background="@drawable/edittext"
                android:layout_marginTop="@dimen/m"
                android:hint="@string/o"
                android:textSize="@dimen/text_size_s"
                android:layout_marginStart="@dimen/l"
                android:layout_marginEnd="@dimen/l"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxl"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/l"
                android:layout_marginEnd="@dimen/l"
                android:layout_marginTop="@dimen/m">
                <TextView
                    android:id="@+id/editprofile_Tv_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/ss"
                    android:background="@drawable/edittext"
                    android:hint="@string/_27_1_1990"
                    android:drawableEnd="@drawable/hbth"
                    android:textSize="@dimen/text_size_s"
                    android:drawableRight="@drawable/hbth"
                    android:layout_marginRight="@dimen/ss" />

                <TextView
                    android:id="@+id/editprofile_Tv_datebirth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/ss"
                    android:background="@drawable/edittext"
                    android:hint="@string/_20_9_2018"
                    android:textSize="@dimen/text_size_s"
                    android:drawableEnd="@drawable/hbth"
                    android:drawableRight="@drawable/hbth"
                    android:layout_marginLeft="@dimen/ss" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxl"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/l"
                android:layout_marginEnd="@dimen/l"
                android:layout_marginTop="@dimen/m">
                <Spinner
                    android:id="@+id/editprofile_Sp_city"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/ss"
                    android:background="@drawable/edittext"
                    android:hint="@string/mansouraa"
                    android:layout_marginRight="@dimen/ss" />
                <Spinner
                    android:id="@+id/editprofile_Sp_govrnment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/al_dakahlya"
                    android:layout_marginStart="@dimen/ss"
                    android:background="@drawable/edittext"
                    android:layout_marginLeft="@dimen/ss" />
            </LinearLayout>

            <EditText
                android:id="@+id/editprofile_ed_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxl"
                android:background="@drawable/edittext"
                android:layout_marginTop="@dimen/m"
                android:hint="@string/phone_number"
                android:layout_marginStart="@dimen/l"
                android:textSize="@dimen/text_size_s"
                android:layout_marginEnd="@dimen/l"/>

            <EditText
                android:id="@+id/editprofile_ed_passwoard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxl"
                android:background="@drawable/edittext"
                android:layout_marginTop="@dimen/m"
                android:hint="@string/password"
                android:layout_marginStart="@dimen/l"
                android:layout_marginEnd="@dimen/l"
                android:textSize="@dimen/text_size_s"
                />
            <EditText
                android:id="@+id/editprofile_ed_passwoard_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxl"
                android:background="@drawable/edittext"
                android:layout_marginTop="@dimen/m"
                android:hint="@string/password"
                android:layout_marginStart="@dimen/l"
                android:layout_marginEnd="@dimen/l"
                android:textSize="@dimen/text_size_s"
                />

            <Button
                android:id="@+id/editprofile_ed_btn_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/l"
                android:layout_marginEnd="@dimen/l"
                android:layout_marginTop="@dimen/m"
                android:layout_marginBottom="@dimen/l"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_m"
                android:background="@color/move"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>