<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Sitingnavigation_fragment_Tv_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m"
            android:padding="@dimen/s"
            android:text="@string/textsitingnotification"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mxl">

            <TextView
                android:id="@+id/Sitingnavigation_fragment_Tv_governet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/rosasy"
                android:text="@string/goverment"
                android:textSize="@dimen/m"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/Sitingnavigation_fragment_rcv_govrnreat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bloodbank_Edit_notifcation_fragment_tv_bloodtaype" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mxl">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/Sitingnavigation_fragment_rcv_bloodtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bloodbank_Edit_notifcation_fragment_tvgoverment" />

            <TextView
                android:id="@+id/Sitingnavigation_fragment_Tv_loodtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/rosasy"
                android:text="@string/blood_type"
                android:textSize="@dimen/m"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/Sitingnavigation_fragment_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x"
            android:layout_marginTop="@dimen/x"
            android:background="@color/black"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
